# moss-core

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
src/: asset_paths.rs  asset_snapshot.rs  ast.rs  builtin-schema.json  completion.rs  content_graph.rs  contract.rs  csv_table.rs  date.rs  extract_headings.rs  frontmatter.rs  frontmatter_typed.rs  frontmatter_union.rs  heading.rs  heading_anchor.rs  home.rs  lib.rs  link_candidates.rs  link_completions.rs  media.rs  page_kind.rs  path_ext.rs  render.rs  resolve.rs  resolved.rs  schema.rs  schema_fields.rs  shortcode.rs  shortcode_tokens.rs  slug.rs  sort.rs  validation.rs
src/ast/: attrs.rs  cells.rs  dispatch_wikilink_embeds.rs  document.rs  editor_scan.rs  extract_hero.rs  hooks.rs  math_text.rs  node.rs  parser.rs  query.rs  render.rs  resolve_urls.rs  shortcode.rs  shortcode_extract.rs  url.rs  visit.rs
src/contract/: components.rs  describe.rs  frontmatter.rs  sizes.rs  tokens.json  tokens.rs
src/heading/: anchor.rs  extract.rs  state.rs  text.rs
src/render/: audio.rs  iframe.rs  image.rs  model.rs  pdf.rs  url_embed.rs  video.rs
src/resolve/: asset_class.rs  asset_registry.rs  block_refs.rs  callouts.rs  embed_renderer.rs  embeds.rs  ext_kind.rs  folder_class.rs  fuzzy_path.rs  link_class.rs  markdown_links.rs  markdown_refs.rs  md_extract.rs  mod.rs  output_url.rs  reference.rs  registry.rs  title_params.rs  wikilink_dispatch.rs  wikilinks.rs
src/resolve/embed_renderer/: common.rs  folder_list.rs
tests/: components_test.rs  describe_test.rs  math_delimiters.rs  math_parsing.rs  never_panics.rs  parser_parity.rs  shortcode_structure_parity.rs  tokens_test.rs
tests/fixtures/: math-delimiters.vectors.json  shortcode_structure_corpus.json
